<resources>
    <string name="app_name">SensorProject</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_map">Map</string>
    <string name="stepTodayHeader">Steps today</string>

    <string name="highScore">High score: %1$d</string>
    <string name="allSteps">All Steps</string>
    <string name="experience">Experience</string>
    <string name="trophies">Trophies</string>
    <string name="level">Level</string>
    <string name="expToNextLevel">%1$d / %2$d</string>

    <string name="stepsPopup">This is the amount of all the steps you have taken while using the application.</string>
    <string name="trophyPopup">This is the amount of trophies you have found and collected.\nYou can find trophies in the map and collect them when you are within range of 150m from them.</string>
    <string name="pointsPopup">This is the amount of experience points you have and the next goal.\nYou get experience points from walking and collecting trophies.</string>
    <string name="levelPopup">This is your level. You get a new level every time you reach the next experience goal.</string>

    <string name="walkedDistanceImageDescription">Walked distance image</string>
    <string name="trophyImageDescription">Trophy image</string>
    <string name="experienceImageDescription">Experience image</string>
    <string name="levelImageDescription">Level image</string>

    <string name="settings">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="preferences">Preferences</string>
    <string name="default_theme_value">AppTheme</string>
    <string name="theme_summary">Change the application color theme</string>

    <string name="pref_settings">pref_settings</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="pref_theme_settings">pref_theme_settings</string>

    <string name="daygoal">Step Goal</string>
    <string name="default_goal_value">100</string>
    <string name="goal_summary">Change your step goal for the day</string>
    <string name="pref_goal_settings">pref_goal</string>

    <string-array name="theme_entries_array">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
    </string-array>

    <string-array name="theme_entry_values_array">
        <item>AppTheme</item>
        <item>AppBlueTheme</item>
        <item>AppGreenTheme</item>
        <item>AppRedTheme</item>
    </string-array>

    <string-array name="progress_entries_array">
        <item>5000 steps</item>
        <item>7500 steps</item>
        <item>10000 steps</item>
        <item>12500 steps</item>
        <item>15000 steps</item>
    </string-array>

    <string-array name="progress_entry_values_array">
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
    </string-array>
</resources>
