<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/walked"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:contentDescription="@string/walkedDistanceImageDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAllTimeStepsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allSteps"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <TextView
                    android:id="@+id/txtAllTimeSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="56dp"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtAllTimeStepsHeader"/>

            </LinearLayout>

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/trophy"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:contentDescription="@string/trophyImageDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trophyCountHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/trophies"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/txtAllTimeStepsHeader"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                    android:id="@+id/trophyCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toRightOf="@id/txtAllTimeSteps"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/trophyCountHeader" />


                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/points"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:contentDescription="@string/experienceImageDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pointsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtAllTimeSteps"/>

                <TextView
                    android:id="@+id/points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pointsHeader"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/level"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:contentDescription="@string/levelImageDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/levelHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/pointsHeader"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trophyCount" />

                <TextView
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toRightOf="@id/points"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/levelHeader" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



<!--TextView
android:id="@+id/trophyCountHeader"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="20sp"
android:text="Trophy"
android:textStyle="bold"
app:layout_constraintLeft_toRightOf="@id/txtAllTimeStepsHeader"
app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/trophyCount"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="40sp"
android:text="trophytext"
app:layout_constraintLeft_toRightOf="@id/txtAllTimeSteps"
app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toBottomOf="@id/trophyCountHeader" />

<TextView
android:id="@+id/levelHeader"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Level"
android:textStyle="bold"
android:textSize="20sp"
app:layout_constraintLeft_toRightOf="@id/pointsHeader"
app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toBottomOf="@+id/trophyCount" />

<TextView
android:id="@+id/level"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Level"
android:textSize="40sp"
app:layout_constraintLeft_toRightOf="@id/experience"
app:layout_constraintRight_toRightOf="parent"
app:layout_constraintTop_toBottomOf="@+id/levelHeader" /-->





    <!--TextView
        android:id="@+id/txtAllTimeSteps"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/trophyCount"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/experience"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="36dp"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toStartOf="@+id/trophyCount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAllTimeSteps" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/trophy"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/trophyCount"
        android:layout_width="84dp"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="87dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="0"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/trophyCount" /-->

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>